--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="rtl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="assets/img/character.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="نقدم الدعم النفسي المتخصص لتحسين جودة حياتك من خلال جلسات استشارية مع مختصين أونلاين. ومهام يومية لتعزيز صحتك النفسية، واختبارات تقييم شاملة."
     />
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" />
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Souliffy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
